--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,13 @@ repos:
   - id: debug-statements
     exclude: docs
 
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  rev: "v0.0.282"
+  hooks:
+    - id: ruff
+      args:
+        - --fix
+
 - repo: https://github.com/psf/black
   rev: "23.7.0"
   hooks:
