--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,3 +43,9 @@ include = ["daft*"]
 
 [tool.black]
 line-length = 79
+
+
+[tool.ruff]
+target-version = "py310"
+line-length = 79
+select = ["UP"]
